Foram ajustados os filtros, removidos arquivos e imports não utilizados, e corrigidos erros